--- a/mcm-2025.tex
+++ b/mcm-2025.tex
@@ -147,7 +147,7 @@ The ANN also used three additional functions to calculate its effectiveness. The
  \hline\hline
   $t_0$ & Initial time, $t_0 = 0$ \\
  $m_t$ & Aggregate of gradients at $t$ ($m_{t_0}=0$) \\
- $m_{t-1}$ & Aggregate of gradients at $t_{previous}$ \\
+ $m_{t-1}$ & Aggregate of gradients at $t_\text{previous}$ \\
  $\omega_{t}$ & Weights at $t$ \\ 
  $\omega_{t+1}$ & Weights at $t\equiv t+1$ \\ 
  $\alpha_t$ & Learning rate at $t$ \\ 
@@ -397,20 +397,21 @@ The final predictions obtained by the two methods above and the distribution of 
 \cline{2-5} \cline{6-9}
 & Gold & Silver & Bronze & Total & Bronze & Silver & Gold & Total \\
 \hline\hline
-United States & 0 & 0 & 0 & 144 & 0 & 0 & 0 & 117 \\
-China         & 0 & 0 & 0 & 8   & 0 & 0 & 0 & 74 \\
-France        & 0 & 0 & 0 & 42  & 0 & 0 & 0 & 66 \\
-Italy         & 0 & 0 & 0 & 28  & 0 & 0 & 0 & 38 \\
-Germany       & 0 & 0 & 0 & 23  & 0 & 0 & 0 & 43 \\ 
+United States & 0 & 0 & 0 & 144 & 34 & 38 & 35 & 117 \\
+China         & 0 & 0 & 0 & 8   & 22 & 23 & 29 & 74 \\
+France        & 0 & 0 & 0 & 42  & 23 & 22 & 21 & 66 \\
+Italy         & 0 & 0 & 0 & 28  & 14 & 12 & 12 & 38 \\
+Germany       & 0 & 0 & 0 & 23  & 14 & 14 & 14 & 43 \\ 
 $\vdots$ & $\vdots$ & $\vdots$ & $\vdots$ & $\vdots$ & $\vdots$ & $\vdots$ & $\vdots$ & $\vdots$ \\ 
-Egypt         & 0 & 0 & 0 & 2   & 0 & 0 & 0 & 5 \\
-Tajikistan    & 0 & 0 & 0 & 0   & 0 & 0 & 0 & 3 \\
+Egypt         & 0 & 0 & 0 & 2   & 2 & 1 & 1 & 5 \\
+Tajikistan    & 0 & 0 & 0 & 0   & 1 & 1 & 0 & 3 \\
 Qatar         & 0 & 0 & 0 & 0   & 0 & 0 & 0 & 0 \\
 Botswana      & 0 & 0 & 0 & 0   & 0 & 0 & 0 & 0 \\ 
 \hline
 \end{tabular}
 \end{table}
 
+Note that in the MLR predictions, the total column was predicted independently
 
 We note the following in 
 
